# phrm-diag

./: .eslintrc.js  .gitignore  DEPLOYMENT.md  PROJECT_STATUS.md  README.md  TASK_LIST.md  docker-compose.yml  main.py  middleware.ts  next.config.js  package-lock.json  package.json  pyproject.toml  run_ai_processing_tests.sh  run_document_processing.sh  sample_medical_report.txt  vercel.json
app/: globals.css  layout.tsx  loading-utils.css  page.tsx
app/dashboard/: page.tsx
app/legal/: layout.tsx
components/: auth-provider.tsx  navigation.tsx  notifications-indicator.tsx  offline-status.tsx
components/charts/: BarChart.tsx  HeatMap.tsx  LineChart.tsx  PieChart.tsx  RadarChart.tsx
components/ui/: accordion.tsx  (+11 more)
docs/: module5-week14-documentation.md  module6-completion-summary.md  optimization-summary.md  week14-summary.md
document_processing/: README.md  __init__.py  api.py  categorization.py  document_management.py  enhancement.py  ocr.py  test_ai_processing.py  test_processing.py
hooks/: use-offline.ts  use-swipe.ts
lib/: analytics.ts  api-cache.ts  api-middleware.ts  audit.ts  auth.ts  background-jobs.ts  cache.ts  connection-pool.ts  data-export.ts  database-optimization.ts  encryption.ts  lazy-loading.tsx  mfa.ts  offline-storage.ts  predictive.ts  push-notifications.ts  rate-limit.ts  secure-storage.ts  security-monitoring.ts  session-management.ts  smart-alerts.ts  toast-context.tsx  visualization.ts
local/: prd.md
prisma/: schema.prisma
public/: manifest.json  offline.html  sw.js
tests/: README.md
trash2review/: README.md
types/: ai.ts
(+140 files in other folders)
